--- a/templates/result.html
+++ b/templates/result.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Upload STL</title>
+    <title>Resultado da Análise</title>
+    <!-- Inclua o CSS do Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>STL Upload and Processing</h1>
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="stlFile" accept=".stl">
-    <input type="submit" value="Upload and Processing">
-</form>
-<div>
-    <h2>Results</h2>
-    <p>
-        <span id="area">Total Area: {{.TotalArea}}</span>
-    </p>
-    <p>
-        <span id="numbers">Number of Triangles: {{.NumTriangles}}</span>
-    </p>
+<div class="container mt-5">
+    <h1 class="text-center">Resultado da Análise</h1>
+    <div class="result-container mt-4 p-4">
+        <p>Número de Triângulos: {{.NumTriangles}}</p>
+        <p>Área Total: {{.AreaTotal}}</p>
+    </div>
 </div>
 </body>
-
 </html>
