--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>File Upload</title>
+    <title>Upload de Arquivo</title>
+    <!-- Inclua o CSS do Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>STL File Upload</h1>
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="arquivo" id="arquivo" accept=".stl">
-    <input type="submit" value="Send STL">
-</form>
+<div class="container mt-5">
+    <h1 class="text-center">Upload de Arquivo para o Servidor Go</h1>
+    <form action="/upload" method="post" enctype="multipart/form-data" class="mt-4">
+        <div class="mb-3">
+            <input class="form-control" type="file" name="arquivo" id="arquivo" accept=".stl">
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar Arquivo</button>
+    </form>
+</div>
 </body>
 </html>
